--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -29,12 +29,12 @@
         <center>
             <div id="playlist">
             </div>
+            <img height="32px" id="showyt" onclick="showyt();" style="float: right; display: inline-block;" src="https://vignette.wikia.nocookie.net/logopedia/images/9/97/Youtube_kids_app_icon.png/revision/latest/scale-to-width-down/480?cb=20150305173154"/>
         </center>
         <div id="wrap">
             <div id="text">
                 <div id="nav">
                     <button id="previous" onclick="previous();" style="display: inline-block; float: left;">Trước</button>
-                    <center><img height="32px" id="showyt" onclick="showyt();" style="display: inline-block;" src="https://vignette.wikia.nocookie.net/logopedia/images/9/97/Youtube_kids_app_icon.png/revision/latest/scale-to-width-down/480?cb=20150305173154"/></center>
                     <button id="next" onclick="next();" style="display: inline-block; float: right;" disabled !important >Sau</button>
                 </div><br>
                 <div id="code">
