--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -26,11 +26,13 @@
         <div id="error">
             Trình duyệt của bạn không được hỗ trợ. Bạn nên sử dụng (<a href="http://www.google.com/chrome">Chrome</a>) và (<a href="http://firefox.com/download/">Firefox</a>)
         </div>
-        <center>
-            <div id="playlist">
-            </div>
+        <div style="padding:10%">
+            <center>
+                <div id="playlist">
+                </div>
+            </center>
             <img height="32px" id="showyt" onclick="showyt();" style="float: right; display: inline-block;" src="https://vignette.wikia.nocookie.net/logopedia/images/9/97/Youtube_kids_app_icon.png/revision/latest/scale-to-width-down/480?cb=20150305173154"/>
-        </center>
+        </div>
         <div id="wrap">
             <div id="text">
                 <div id="nav">
@@ -56,7 +58,7 @@
             iframe.id = "ytplaylist";
             iframe.src = url;
             iframe.frameBorder = 0;
-            iframe.width = "90%";
+            iframe.width = "100%";
             iframe.height = "1px";
             document.getElementById("playlist").appendChild(iframe);
         })();
