--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -31,7 +31,8 @@
                 <div id="playlist">
                 </div>
             </center>
-            <img height="32px" id="showyt" onclick="showyt();" style="float: right; display: inline-block;" src="https://vignette.wikia.nocookie.net/logopedia/images/9/97/Youtube_kids_app_icon.png/revision/latest/scale-to-width-down/480?cb=20150305173154"/>
+            <font color="#666666" style="float: right;">Xem video hông ?? >> </font>
+            <img height="32px" id="showyt" onclick="showyt();" style="float: right;" src="https://vignette.wikia.nocookie.net/logopedia/images/9/97/Youtube_kids_app_icon.png/revision/latest/scale-to-width-down/480?cb=20150305173154"/>
         </div>
         <div id="wrap">
             <div id="text">
