--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -26,13 +26,13 @@
         <div id="error">
             Trình duyệt của bạn không được hỗ trợ. Bạn nên sử dụng (<a href="http://www.google.com/chrome">Chrome</a>) và (<a href="http://firefox.com/download/">Firefox</a>)
         </div>
-        <div style="padding-left:5%; padding-right:5%">
+        <div style="position: sticky; top: 0px; padding-left:5%; padding-right:5%">
             <center>
                 <div id="playlist">
                 </div>
             </center>
             <img height="32px" id="showyt" onclick="showyt();" style="float: right;" src="https://vignette.wikia.nocookie.net/logopedia/images/9/97/Youtube_kids_app_icon.png/revision/latest/scale-to-width-down/480?cb=20150305173154"/>
-            <font color="#666666" style="float: right;">Xem video thì ấn vào </font>
+            <font id="txtVideo" color="#666666" style="float: right;">Xem video thì ấn vào </font>
         </div>
         <div id="wrap">
             <div id="text">
@@ -66,12 +66,15 @@
         function showyt() {
             $('#ytplaylist').attr("height", "600px");
             $('#showyt').attr("onclick","hideyt();");
-            $('#ytplaylist').style("padding","5%");
+            $('#ytplaylist').style.padding="5%");
+            $('#txtVideo').text("Xem video thì ấn vào ");
+            
         }
         function hideyt() {
             $('#ytplaylist').attr("height", "1px");
             $('#showyt').attr("onclick","showyt();");
-            $('#ytplaylist').style("padding","0");
+            $('#ytplaylist').style.padding"="0");
+            $('#txtVideo').text("Ẩn video thì ấn vào ");
         }
     </script>
     <script>
