--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -66,15 +66,15 @@
         function showyt() {
             $('#ytplaylist').attr("height", "600px");
             $('#showyt').attr("onclick","hideyt();");
-            //$('#ytplaylist').style.padding="5%");
-            $('#txtVideo').text("Xem video thì ấn vào ");
+            $('#ytplaylist').css("padding","5%");
+            $('#txtVideo').text("Ẩn video thì ấn vào ");
             
         }
         function hideyt() {
             $('#ytplaylist').attr("height", "1px");
             $('#showyt').attr("onclick","showyt();");
-            //$('#ytplaylist').style.padding"="0");
-            $('#txtVideo').text("Ẩn video thì ấn vào ");
+            $('#ytplaylist').css("padding","0");
+            $('#txtVideo').text("Xem video thì ấn vào ");
         }
     </script>
     <script>
