--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -32,7 +32,7 @@
                 </div>
             </center>
             <img height="32px" id="showyt" onclick="showyt();" style="float: right;" src="https://vignette.wikia.nocookie.net/logopedia/images/9/97/Youtube_kids_app_icon.png/revision/latest/scale-to-width-down/480?cb=20150305173154"/>
-            <font id="txtVideo" color="#666666" style="float: right;">Xem video thì ấn vào </font>
+            <font id="txtVideo" color="#666666" style="float: right; padding-right: 5px;">Xem video thì ấn vào </font>
         </div>
         <div id="wrap">
             <div id="text">
@@ -66,14 +66,14 @@
         function showyt() {
             $('#ytplaylist').attr("height", "600px");
             $('#showyt').attr("onclick","hideyt();");
-            $('#ytplaylist').css("padding","5%");
+            $('#ytplaylist').css("padding-top","10px");
             $('#txtVideo').text("Ẩn video thì ấn vào ");
             
         }
         function hideyt() {
             $('#ytplaylist').attr("height", "1px");
             $('#showyt').attr("onclick","showyt();");
-            $('#ytplaylist').css("padding","0");
+            $('#ytplaylist').css("padding-top","0");
             $('#txtVideo').text("Xem video thì ấn vào ");
         }
     </script>
