--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -26,7 +26,7 @@
         <div id="error">
             Trình duyệt của bạn không được hỗ trợ. Bạn nên sử dụng (<a href="http://www.google.com/chrome">Chrome</a>) và (<a href="http://firefox.com/download/">Firefox</a>)
         </div>
-        <div style="position: sticky; top: 0px; padding-left:5%; padding-right:5%">
+        <div style="z-index: 500; position: sticky; top: 0px; padding-left:5%; padding-right:5%">
             <center>
                 <div id="playlist">
                 </div>
