--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -49,7 +49,7 @@
                 <span class="STYLE1"> Khoảng thời gian bên nhau...</span>
                 <div id="clock"></div>
             </div>
-            <canvas id="canvas" style="z-index: 501; width="1100" height="680"></canvas>
+            <canvas id="canvas" style="z-index: 501;" width="1100" height="680"></canvas>
         </div>
     </div>
     <script>
