--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -27,10 +27,7 @@
             Trình duyệt của bạn không được hỗ trợ. Bạn nên sử dụng (<a href="http://www.google.com/chrome">Chrome</a>) và (<a href="http://firefox.com/download/">Firefox</a>)
         </div>
         <div style="z-index: 500; position: sticky; top: 0px; padding-left:5%; padding-right:5%">
-            <center>
-                <div id="playlist">
-                </div>
-            </center>
+            <div id="playlist"></div>
             <img height="32px" id="showyt" onclick="showyt();" style="float: right;" src="https://vignette.wikia.nocookie.net/logopedia/images/9/97/Youtube_kids_app_icon.png/revision/latest/scale-to-width-down/480?cb=20150305173154"/>
             <font id="txtVideo" color="#666666" style="float: right; padding-right: 5px;">Xem video thì ấn vào </font>
         </div>
