--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -63,7 +63,7 @@
         function showyt() {
             $('#ytplaylist').attr("height", "600px");
             $('#showyt').attr("onclick","hideyt();");
-            $('#ytplaylist').css("padding-top","2\0px");
+            $('#ytplaylist').css("padding-top","30px");
             $('#txtVideo').text("Ẩn video thì ấn vào ");
             
         }
