--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -100,7 +100,7 @@
             setRandomColor();
             var code = $("#code");
             code.html($("#diary").contents().find("body").html());
-            code.slideDown("1000",function(){
+            code.slideDown("5000");
             document.getElementById('next').disabled=false;
             if(here <= 1)
                 document.getElementById('previous').disabled=true;});
@@ -113,7 +113,7 @@
             setRandomColor();
             var code = $("#code");
             code.html($("#diary").contents().find("body").html());
-            code.slideDown("1000",function(){
+            code.slideDown("5000");
             document.getElementById('previous').disabled=false;
             if(here >= latest)
                 document.getElementById('next').disabled=true;});
