--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -103,7 +103,7 @@
             code.slideDown("5000");
             document.getElementById('next').disabled=false;
             if(here <= 1)
-                document.getElementById('previous').disabled=true;});
+                document.getElementById('previous').disabled=true;
         }
         function next() {
             here++;
@@ -116,7 +116,7 @@
             code.slideDown("5000");
             document.getElementById('previous').disabled=false;
             if(here >= latest)
-                document.getElementById('next').disabled=true;});
+                document.getElementById('next').disabled=true;
         }
         (function(){
             var iframe = document.createElement('iframe');
