--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -262,7 +262,7 @@
                 $await(growAnimate());
                 $await(flowAnimate());
                 $await(moveAnimate());
-                clockAnimate().start();
+                //clockAnimate().start();
                 textAnimate();
                 
                 $await(jumpAnimate());
