--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -31,6 +31,7 @@
             <img height="32px" id="showyt" onclick="showyt();" style="float: right;" src="https://vignette.wikia.nocookie.net/logopedia/images/9/97/Youtube_kids_app_icon.png/revision/latest/scale-to-width-down/480?cb=20150305173154"/>
             <font id="txtVideo" color="#666666" style="float: right; padding-right: 5px;">Xem video thì ấn vào </font>
         </div>
+        <div height="20px"></div>
         <div id="wrap">
             <div id="text">
                 <div id="nav">
