--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -74,7 +74,7 @@
             $('#ytplaylist').css("padding-top","0");
             $('#txtVideo').text("Xem video thì ấn vào ");
         }        
-        $('#topbar').show().delay(1000);
+        $('#topbar').delay(1000).show();
     </script>
     <script>
         var latest = 2;
