--- a/kt/mylove/diary/2.html
+++ b/kt/mylove/diary/2.html
@@ -1,7 +1,7 @@
 <p id="txtDiary">
     <span class="say">Em này, </span><br>
     <span class="say"> </span><br>
-    <span class="say">^_^ Em là người con gái anh yêu !! </span><br>
+    <span class="say">😊 Em là người con gái anh yêu !! </span><br>
     <span class="say">Không phải chỉ bởi.. </span><br>
     <span class="say">Em xinh đẹp đến nỗi anh như bị sét tình đánh, </span><br>
     <span class="say">Hay những biểu cảm đáng yêu kia, </span><br>
@@ -11,5 +11,5 @@
     <span class="say">Vậy hãy cứ tin em nhé.. </span><br>
     <span class="say">"Rồi đây e cũng sẽ phải về ở đợ nhà anh" </span><br>
     <span class="say"> </span><br>
-    <span class="say"><span class="space"></span>-- Yêu em thật nhiều.. moazzz :*</span>
+    <span class="say"><span class="space"></span>-- Yêu em thật nhiều.. moazzz 😘</span>
 </p>
