--- a/kt/mylove/diary/2.html
+++ b/kt/mylove/diary/2.html
@@ -11,5 +11,5 @@
     <span class="say">Vậy hãy cứ tin em nhé.. </span><br>
     <span class="say">"Rồi đây e cũng sẽ phải về ở đợ nhà anh" </span><br>
     <span class="say"> </span><br>
-    <span class="say"><span class="space"></span>-- Yêu em thật nhiều.. moazzz 😘</span>
+    <span class="say" style="float:right;">-- Yêu em thật nhiều.. moazzz 😘</span>
 </p>
