--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -41,7 +41,7 @@
                 <div id="code" onclick="function(){event.stopPropagation();}">
                     <p>This is placeholder</p>
                 </div>
-            </d
+            </div>
             <div id="clock-box">
                 <span class="STYLE1"></span><font color="#FF0000">* Anh Yêu Em *</font>
                 <span class="STYLE1"> Khoảng thời gian bên nhau...</span>
