--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -104,7 +104,7 @@
             iframe.src = "./diary/" + here.toString() + ".html";
             iframe.reload;
             setRandomColor();
-            console.log(iframe.src);
+            console.log(iframe);
             var code = $("#code");
             code.html($("#diary").contents().find("body").html());
             code.show().typewriter();
@@ -118,7 +118,7 @@
             iframe.src = "./diary/" + here.toString() + ".html";
             iframe.reload;
             setRandomColor();
-            console.log(iframe.src);
+            console.log(iframe);
             var code = $("#code");
             code.html($("#diary").contents().find("body").html());
             code.show().typewriter();
