--- a/kt/mylove/diary/3.html
+++ b/kt/mylove/diary/3.html
@@ -1,5 +1,5 @@
 <p id ="txtDiary">
-    <span class="say">Em này, </span><br>
+    <span class="say">3Em này, </span><br>
     <span class="say"> </span><br>
     <span class="say">😊 </span><br>
     <span class="say">Không phải chỉ bởi.. </span><br>
