--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -103,7 +103,7 @@
             var iframe = document.getElementById('diary');            
             iframe.src = "./diary/" + here.toString() + ".html";
             iframe.reload;
-            setRandomColor();
+            //setRandomColor();
             var code = $("#code");
             code.html($("#diary").contents().find("body").html());
             console.log(code.html());
@@ -117,7 +117,7 @@
             var iframe = document.getElementById('diary');
             iframe.src = "./diary/" + here.toString() + ".html";
             iframe.reload;
-            setRandomColor();
+            //setRandomColor();
             var code = $("#code");
             code.html($("#diary").contents().find("body").html());
             console.log(code.html());
