--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -105,7 +105,7 @@
             iframe.reload;
             //setRandomColor();
             var code = $("#code");
-            code.html($("#diary").contents().find("body").html());
+            code.html(iframe.contents().find("body").html());
             console.log(code.html());
             code.show().typewriter();
             document.getElementById('next').disabled=false;
@@ -119,7 +119,7 @@
             iframe.reload;
             //setRandomColor();
             var code = $("#code");
-            code.html($("#diary").contents().find("body").html());
+            code.html(iframe.contents().find("body").html());
             console.log(code.html());
             code.show().typewriter();
             document.getElementById('previous').disabled=false;
