--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -76,8 +76,8 @@
             window.scrollTo(0, document.body.scrollHeight);
         }        
         setTimeout(function(){
-            $('#txtVideo').show();
-            $('#showyt').show();
+            $('#txtVideo').show("slow");
+            $('#showyt').show("slow");
         }, 5000);
     </script>
     <script>
