--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -103,7 +103,9 @@
             var iframe = document.getElementById('diary');            
             iframe.src = "./diary/" + here.toString() + ".html";
             iframe.reload;
-            //setRandomColor();
+            setTimeout(function(){
+                setRandomColor();
+            }, 1000)
             var code = $("#code");
             code.html($("#diary").contents().find("body").html());
             console.log($("#diary").contents().find("body").html());
@@ -118,7 +120,9 @@
             var iframe = document.getElementById('diary');
             iframe.src = "./diary/" + here.toString() + ".html";
             iframe.reload;
-            //setRandomColor();
+            setTimeout(function(){
+                setRandomColor();
+            }, 1000)
             var code = $("#code");
             code.html($("#diary").contents().find("body").html());
             console.log($("#diary").contents().find("body").html());
