--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -103,15 +103,12 @@
             var iframe = document.getElementById('diary');            
             iframe.src = "./diary/" + here.toString() + ".html";
             iframe.reload;
-            setTimeout(function(){
+            if (iframe.readyState = "complete") {
                 setRandomColor();
-
-            var code = $("#code");
-            code.html($("#diary").contents().find("body").html());
-            console.log($("#diary").contents().find("body").html());
-            console.log(code.html());
-            code.show().typewriter();
-            }, 1000);
+                var code = $("#code");
+                code.html($("#diary").contents().find("body").html());
+                code.show().typewriter();
+            }
             document.getElementById('next').disabled=false;
             if(here <= 1)
                 document.getElementById('previous').disabled=true;
@@ -121,15 +118,12 @@
             var iframe = document.getElementById('diary');
             iframe.src = "./diary/" + here.toString() + ".html";
             iframe.reload;
-            setTimeout(function(){
+            if (iframe.readyState = "complete") {
                 setRandomColor();
-
-            var code = $("#code");
-            code.html($("#diary").contents().find("body").html());
-            console.log($("#diary").contents().find("body").html());
-            console.log(code.html());
-            code.show().typewriter();
-                            }, 1000);
+                var code = $("#code");
+                code.html($("#diary").contents().find("body").html());
+                code.show().typewriter();
+            }
             document.getElementById('previous').disabled=false;
             if(here >= latest)
                 document.getElementById('next').disabled=true;
