--- a/kt/mylove/diary/1.html
+++ b/kt/mylove/diary/1.html
@@ -1,5 +1,5 @@
 <p id="txtDiary">
-    <span class="say">1Em này, </span><br>
+    <span class="say">Em này, </span><br>
     <span class="say"> </span><br>
     <span class="say">^_^ Em là người con gái anh yêu !! </span><br>
     <span class="say">Không phải chỉ bởi.. </span><br>
