--- a/kt/mylove/diary/2.html
+++ b/kt/mylove/diary/2.html
@@ -1,5 +1,5 @@
 <p id="txtDiary">
-    <span class="say">2Em này, </span><br>
+    <span class="say">Em này, </span><br>
     <span class="say"> </span><br>
     <span class="say">😊 Em là người con gái anh yêu !! </span><br>
     <span class="say">Không phải chỉ bởi.. </span><br>
