--- a/kt/mylove/diary/3.html
+++ b/kt/mylove/diary/3.html
@@ -1,13 +1,22 @@
-<p id ="txtDiary">
-    <span class="say">3Em này, </span><br>
+<p id="txtDiary">
     <span class="say"> </span><br>
-    <span class="say">😊 </span><br>
-    <span class="say">Không phải chỉ bởi.. </span><br>
-    <span class="say">Em xinh đẹp đến nỗi anh như bị sét tình đánh, </span><br>
-    <span class="say">Hay những biểu cảm đáng yêu kia, </span><br>
-    <span class="say">..em dành cho anh !! </span><br>
     <span class="say"> </span><br>
-    <span class="say">Em là một điều kỳ lạ nhất từng xuất hiện trong anh </span><br>
     <span class="say"> </span><br>
-    <span class="say" style="float:right;">-- Yêu em nhiều nhiều.. moazzz 😘</span>
+    <span class="say"> </span><br>
+    <span class="say"> </span><br>
+    <span class="say"> </span><br>
+    <span class="say"> </span><br>
+    <span class="say"> </span><br>
+    <span class="say"> </span><br>
+    <span class="say"> </span><br>
+    <span class="say"> </span><br>
+    <span class="say"> </span><br>
+    <span class="say"> </span><br>
+    <span class="say"> </span><br>
+    <span class="say"> </span><br>
+    <span class="say"> </span><br>
+    <span class="say"> </span><br>
+    <span class="say"> </span><br>
+    <span class="say"> </span><br>
+    <span class="say"><span class="space"></span>-- Yêu em thật nhiều.. moazzz :*</span>
 </p>
