--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -38,7 +38,7 @@
                     <button id="previous" onclick="previous();" style="display: inline-block; float: left;">Trước</button>
                     <button id="next" onclick="next();" style="display: inline-block; float: right;">Sau</button>
                 </div><br>
-                <div id="code">
+                <div id="code" onclick="this.off();">
                     <p>This is placeholder</p>
                 </div>
             </div>
@@ -107,7 +107,7 @@
                 setRandomColor();
                 var code = $("#code");
                 code.html($("#diary").contents().find("body").html());
-                code.off();
+                code.trigger('click');
                 code.show().typewriter();
             }, 1000);
             document.getElementById('next').disabled=false;
@@ -123,7 +123,8 @@
                 setRandomColor();
                 var code = $("#code");
                 code.html($("#diary").contents().find("body").html());
-                code.off();
+                code.html($("#diary").contents().find("body").html());
+                code.trigger('click');
                 code.show().typewriter();
             }, 1000);
             document.getElementById('previous').disabled=false;
