--- a/kt/mylove/index.html
+++ b/kt/mylove/index.html
@@ -38,7 +38,7 @@
                     <button id="previous" onclick="previous();" style="display: inline-block; float: left;">Trước</button>
                     <button id="next" onclick="next();" style="display: inline-block; float: right;">Sau</button>
                 </div><br>
-                <div id="code" onclick="this.off();">
+                <div id="code" onclick="$(this).off();">
                     <p>This is placeholder</p>
                 </div>
             </div>
